src/test/ui/issue-34209.stderr
error[E0223]: ambiguous associated type
  --> $DIR/issue-34209.rs:17:9
   |
LL |         S::B{ } => { },
   |         ^^^^ ambiguous associated type
   |
   = note: specify the type using the syntax `<S as Trait>::B`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0223`.
